syntax = "proto3";  // Указываем, что используем синтаксис proto3 для определения сервисов и сообщений.

package order;  // Определяем пакет, в котором будет находиться наш сервис и сообщения.

service OrderService {  // Определяем сервис OrderService с двумя методами.
  // RPC метод для создания нового заказа.
  rpc CreateOrder (CreateOrderRequest) returns (OrderResponse);
  
  // RPC метод для получения информации о заказе по его идентификатору.
  rpc GetOrder (GetOrderRequest) returns (OrderResponse);
}

// Сообщение для создания нового заказа.
// Включает идентификатор пользователя, наименование продукта и количество.
message CreateOrderRequest {
  string userId = 1;       // Идентификатор пользователя, который делает заказ.
  string productName = 2;  // Название продукта, который заказывается.
  int32 quantity = 3;      // Количество единиц продукта.
}

// Сообщение для получения заказа по его идентификатору.
// Содержит только идентификатор заказа.
message GetOrderRequest {
  string orderId = 1;  // Идентификатор заказа, по которому нужно получить данные.
}

// Сообщение, которое используется для ответа на запросы.
// Содержит все данные о заказе: его идентификатор, информацию о пользователе, продукте и количестве.
message OrderResponse {
  string orderId = 1;   // Идентификатор заказа.
  string userId = 2;    // Идентификатор пользователя, который сделал заказ.
  string productName = 3; // Название продукта, который был заказан.
  int32 quantity = 4;     // Количество единиц заказанного продукта.
}
